Fix header spacing, mobile back-button trap

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -131,6 +131,7 @@
   .menu-toggle {
     display: block;
     order: 2;
+    margin-left: 18px;
   }
 
   .nav-links {
